# vllm-plamo3-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
vllm_plamo3/: __init__.py  plamo3.py
