[build-system]
requires = ["setuptools >= 64"]

[project]
name = "vllm_plamo3"
version = "0.0.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "vllm>=0.9.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.0.1"
]

[project.entry-points."vllm.general_plugins"]
vllm_plamo3 = "vllm_plamo3:register"

[tool.setuptools]
packages = { find = { include = ["vllm_plamo3"] } }

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-logging-format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # zip without `strict=`
    "B905",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"
